# wasm-protobuf

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp
proto/: person.pb.cc  person.pb.h  person.proto
